feat(api): add board handlers
